--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,47 +3,44 @@
          xmlns="http://java.sun.com/xml/ns/j2ee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-
+    <!--spring-->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:applicationContext.xml</param-value>
+    </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    <!--<context-param>-->
-    <!--<param-name>contextConfigLocation</param-name>-->
-    <!--<param-value>classpath:spring-security.xml,classpath:applicationContext.xml</param-value>-->
-    <!--</context-param>-->
-    <!--
-      - Declare Spring request listener which sets up the required RequestAttributes
-      - to support Springs and Cocoon custom bean scopes like the request scope or the
-      - session scope.
-      -->
+    <!--end-->
+    <!--监听器（可选）-->
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
     <!--spring security -->
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--<filter>-->
+    <!--<filter-name>springSecurityFilterChain</filter-name>-->
+    <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+    <!--<filter-name>springSecurityFilterChain</filter-name>-->
+    <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
     <!--end-->
+    <!--springmvc-->
     <servlet>
         <servlet-name>DispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/springmvc.xml</param-value>
+            <param-value>classpath:springmvc.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>DispatcherServlet</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
-
+    <!--end-->
 
     <!--编码过滤器-->
     <filter>
@@ -58,17 +55,12 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
-
-
-
     <filter-mapping>
         <filter-name>characterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--end-->
+
     <!--不拦截静态资源-->
     <servlet-mapping>
         <servlet-name>default</servlet-name>
@@ -98,96 +90,3 @@
         <welcome-file>home.html</welcome-file>
     </welcome-file-list>
 </web-app>
-        <!--
-          Licensed to the Apache Software Foundation (ASF) under one or more
-          contributor license agreements.  See the NOTICE file distributed with
-          this work for additional information regarding copyright ownership.
-          The ASF licenses this file to You under the Apache License, Version 2.0
-          (the "License"); you may not use this file except in compliance with
-          the License.  You may obtain a copy of the License at
-
-              http://www.apache.org/licenses/LICENSE-2.0
-
-          Unless required by applicable law or agreed to in writing, software
-          distributed under the License is distributed on an "AS IS" BASIS,
-          WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-          See the License for the specific language governing permissions and
-          limitations under the License.
-        -->
-
-        <!--
-          - This is the Cocoon web-app configurations file
-          -
-          - $Id$
-          -->
-        <!-- Servlet Filters ================================================ -->
-
-        <!--
-          - Declare a filter for multipart MIME handling
-          -->
-        <!--<filter>-->
-        <!--<description>Multipart MIME handling filter for Cocoon</description>-->
-        <!--<display-name>Cocoon multipart filter</display-name>-->
-        <!--<filter-name>CocoonMultipartFilter</filter-name>-->
-        <!--<filter-class>org.apache.cocoon.servlet.multipart.MultipartFilter</filter-class>-->
-        <!--</filter>-->
-
-        <!--
-          - Declare a filter for debugging incoming request
-          -->
-        <!--<filter>-->
-        <!--<description>Log debug information about each request</description>-->
-        <!--<display-name>Cocoon debug filter</display-name>-->
-        <!--<filter-name>CocoonDebugFilter</filter-name>-->
-        <!--<filter-class>org.apache.cocoon.servlet.DebugFilter</filter-class>-->
-        <!--</filter>-->
-
-        <!-- Filter mappings ================================================ -->
-
-        <!--
-          - Use the Cocoon multipart filter together with the Cocoon demo webapp
-          -->
-        <!--<filter-mapping>-->
-        <!--<filter-name>CocoonMultipartFilter</filter-name>-->
-        <!--<servlet-name>Cocoon</servlet-name>-->
-        <!--</filter-mapping>-->
-        <!--<filter-mapping>-->
-        <!--<filter-name>CocoonMultipartFilter</filter-name>-->
-        <!--<servlet-name>DispatcherServlet</servlet-name>-->
-        <!--</filter-mapping>-->
-
-        <!--
-          - Use the Cocoon debug filter together with the Cocoon demo webapp
-        <filter-mapping>
-          <filter-name>CocoonDebugFilter</filter-name>
-          <servlet-name>Cocoon</servlet-name>
-        </filter-mapping>
-          -->
-
-        <!-- Servlet Context Listener ======================================= -->
-
-        <!--
-          - Declare Spring context listener which sets up the Spring Application Context
-          - containing all Cocoon components (and user defined beans as well).
-          -->
-        <!-- 可以自定义servlet.xml配置文件的位置和名称，默认为WEB-INF目录下，名称为[<servlet-name>]-servlet.xml，如spring-servlet.xml
-    <init-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/spring-servlet.xml</param-value>&nbsp; 默认
-    </init-param>
-    -->
-        <!-- Servlet Configuration ========================================== -->
-
-        <!--
-          - Servlet that dispatches requests to the Spring managed block servlets
-          -->
-
-
-        <!-- URL space mappings ============================================= -->
-
-        <!--
-          - Cocoon handles all the URL space assigned to the webapp using its sitemap.
-          - It is recommended to leave it unchanged. Under some circumstances though
-          - (like integration with proprietary webapps or servlets) you might have
-          - to change this parameter.
-          -->
