--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,16 +28,21 @@
     <!--end-->
     <!--springmvc-->
     <servlet>
-        <servlet-name>DispatcherServlet</servlet-name>
+        <servlet-name>spring-servlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:springmvc.xml</param-value>
+            <param-value>classpath:spring-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
-        <servlet-name>DispatcherServlet</servlet-name>
+        <servlet-name>spring-servlet</servlet-name>
+        <!--
+        如果设置为/*，会拦截所有动态资源，造成无法访问，例如*.jsp。
+        [推荐]如果设置为*.action，则只会拦截以action为结尾的资源，其他动态资源与静态资源不受影响，但会影响Spring Security。
+        [推荐]如果设置为/，会拦截所有静态资源，造成无法访问，例如*.html。解决方法：spring-servlet.xml配置<mvc:resources/>标签
+        -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     <!--end-->
@@ -63,28 +68,28 @@
 
     <!--不拦截静态资源-->
     <!--<servlet-mapping>-->
-        <!--<servlet-name>default</servlet-name>-->
-        <!--<url-pattern>*.css</url-pattern>-->
+    <!--<servlet-name>default</servlet-name>-->
+    <!--<url-pattern>*.css</url-pattern>-->
     <!--</servlet-mapping>-->
     <!--<servlet-mapping>-->
-        <!--<servlet-name>default</servlet-name>-->
-        <!--<url-pattern>*.gif</url-pattern>-->
+    <!--<servlet-name>default</servlet-name>-->
+    <!--<url-pattern>*.gif</url-pattern>-->
     <!--</servlet-mapping>-->
     <!--<servlet-mapping>-->
-        <!--<servlet-name>default</servlet-name>-->
-        <!--<url-pattern>*.jpg</url-pattern>-->
+    <!--<servlet-name>default</servlet-name>-->
+    <!--<url-pattern>*.jpg</url-pattern>-->
     <!--</servlet-mapping>-->
     <!--<servlet-mapping>-->
-        <!--<servlet-name>default</servlet-name>-->
-        <!--<url-pattern>*.png</url-pattern>-->
+    <!--<servlet-name>default</servlet-name>-->
+    <!--<url-pattern>*.png</url-pattern>-->
     <!--</servlet-mapping>-->
     <!--<servlet-mapping>-->
-        <!--<servlet-name>default</servlet-name>-->
-        <!--<url-pattern>*.js</url-pattern>-->
+    <!--<servlet-name>default</servlet-name>-->
+    <!--<url-pattern>*.js</url-pattern>-->
     <!--</servlet-mapping>-->
     <!--<servlet-mapping>-->
-        <!--<servlet-name>default</servlet-name>-->
-        <!--<url-pattern>*.html</url-pattern>-->
+    <!--<servlet-name>default</servlet-name>-->
+    <!--<url-pattern>*.html</url-pattern>-->
     <!--</servlet-mapping>-->
     <welcome-file-list>
         <welcome-file>home.html</welcome-file>
