--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,20 @@
             <artifactId>standard</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <!-- end-->
+        <!--validation-->
+        <!--<dependency>-->
+            <!--<groupId>javax.validation</groupId>-->
+            <!--<artifactId>validation-api</artifactId>-->
+            <!--<version>1.1.0.Final</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.bval</groupId>-->
+            <!--<artifactId>bval-jsr303</artifactId>-->
+            <!--<version>0.5</version>-->
+        <!--</dependency>-->
+        <!-- end-->
+
     </dependencies>
     <properties>
         <org.springframework.version>4.2.8.RELEASE</org.springframework.version>
