--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,20 +12,23 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
     <!--end-->
+
     <!--监听器（可选）-->
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
+
     <!--spring security -->
-    <!--<filter>-->
-    <!--<filter-name>springSecurityFilterChain</filter-name>-->
-    <!--<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-    <!--<filter-name>springSecurityFilterChain</filter-name>-->
-    <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <!--end-->
+
     <!--springmvc-->
     <servlet>
         <servlet-name>spring-servlet</servlet-name>
@@ -66,7 +69,7 @@
     </filter-mapping>
     <!--end-->
 
-    <!--不拦截静态资源-->
+    <!--tomcat 层面设置：不拦截静态资源,效率低-->
     <!--<servlet-mapping>-->
     <!--<servlet-name>default</servlet-name>-->
     <!--<url-pattern>*.css</url-pattern>-->
@@ -91,7 +94,17 @@
     <!--<servlet-name>default</servlet-name>-->
     <!--<url-pattern>*.html</url-pattern>-->
     <!--</servlet-mapping>-->
-    <welcome-file-list>
-        <welcome-file>home.html</welcome-file>
-    </welcome-file-list>
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/WEB-INF/views/403.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/views/404.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/views/500.jsp</location>
+    </error-page>
 </web-app>
