--- a/pom.xml
+++ b/pom.xml
@@ -115,20 +115,39 @@
         <!-- end-->
         <!--validation-->
         <!--<dependency>-->
-            <!--<groupId>javax.validation</groupId>-->
-            <!--<artifactId>validation-api</artifactId>-->
-            <!--<version>1.1.0.Final</version>-->
+        <!--<groupId>javax.validation</groupId>-->
+        <!--<artifactId>validation-api</artifactId>-->
+        <!--<version>1.1.0.Final</version>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>org.apache.bval</groupId>-->
-            <!--<artifactId>bval-jsr303</artifactId>-->
-            <!--<version>0.5</version>-->
+        <!--<groupId>org.apache.bval</groupId>-->
+        <!--<artifactId>bval-jsr303</artifactId>-->
+        <!--<version>0.5</version>-->
         <!--</dependency>-->
         <!-- end-->
 
+        <!--json-->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.8.2</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+        <!--end-->
     </dependencies>
     <properties>
-        <org.springframework.version>4.2.8.RELEASE</org.springframework.version>
+        <org.springframework.version>3.2.8.RELEASE</org.springframework.version>
         <aspectj.version>1.6.11</aspectj.version>
         <security.version>3.2.3.RELEASE</security.version>
     </properties>
