--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,19 @@
             <version>1.2.5</version>
         </dependency>
         <!--end-->
+        <!--spring-test-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${org.springframework.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- mysql数据库的驱动包 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
     </dependencies>
     <properties>
         <org.springframework.version>3.2.8.RELEASE</org.springframework.version>
